--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "pack/thinca/start/vim-visualstar"]
 	path = pack/thinca/start/vim-visualstar
 	url = ../../thinca/vim-visualstar.git
+[submodule "pack/akinsho/start/toggleterm.nvim"]
+	path = pack/akinsho/start/toggleterm.nvim
+	url = ../../akinsho/toggleterm.nvim.git
