--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "pack/akinsho/start/toggleterm.nvim"]
 	path = pack/akinsho/start/toggleterm.nvim
 	url = ../../akinsho/toggleterm.nvim.git
+[submodule "pack/nvim-lua/start/plenary.nvim"]
+	path = pack/nvim-lua/start/plenary.nvim
+	url = ../../nvim-lua/plenary.nvim.git
+[submodule "pack/nvim-telescope/start/telescope.nvim"]
+	path = pack/nvim-telescope/start/telescope.nvim
+	url = ../../nvim-telescope/telescope.nvim.git
