--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,6 @@
 [submodule "pack/lewis6991/start/gitsigns.nvim"]
 	path = pack/lewis6991/start/gitsigns.nvim
 	url = ../../lewis6991/gitsigns.nvim.git
+[submodule "pack/tpope/start/vim-commentary"]
+	path = pack/tpope/start/vim-commentary
+	url = ../../tpope/vim-commentary.git
